# CS221-ColemanDataStructs

assignment1/: BookRecord.cpp  CMakeLists.txt  main.cpp
assignment1/Submission/: README.md
assignment1/Submission/scrum/: scrum1output.tiff
assignment1/Submission/scrum/scrum1src/: CMakeLists.txt  main.cpp
assignment1/Submission/src/: BookRecord.h
assignment1/misc/: ScrumReport1.odt
assignment1/misc/scrum1/scrumsrc/: BookRecord.cpp  BookRecord.h  CMakeLists.txt  main.cpp
assignment2/: CMakeLists.txt  Prog2.txt  ReadMe.txt  SprintReport_P2.odt
assignment2/deployments/final_turnin/: BookRecord.cpp  BookRecord.h  Book_Inventory.cpp  Book_Inventory.h
assignment2/inventory/: BookData.txt
assignment2/src/: main.cpp
assignment3/: CMakeLists.txt
assignment3/demo/: Prog3.txt  ReadMe.txt  SprintReport_P3.docx  SprintReport_P3.odt
assignment3/deployments/final_code/: BookRecord.cpp  Book_Database.cpp  Book_Database.h
assignment3/include/: BookRecord.h  Book_Database.h
assignment3/inventory/: BookData.txt
assignment3/src/: Book_Database.cpp  main.cpp
assignment4/: Makefile  P4Results.txt  main.cpp
